--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -23,18 +23,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r ./requirements.txt
-    - name: 石
+    - name: Levick
       run: |
-        python ./upload.py -n 1 -u ${{ secrets.USER_ONE }} -p ${{ secrets.PASS_ONE }} -f ./data/upload.txt
-    - name: 王
-      run: |
-        python ./upload.py -n 1 -u ${{ secrets.USER_TWO }} -p ${{ secrets.PASS_TWO }} -f ./data/upload.txt
-    - name: 汤
-      run: |
-        python ./upload.py -n 1 -u ${{ secrets.USER_THREE }} -p ${{ secrets.PASS_THREE }} -f ./data/upload.txt
-    - name: 李
-      run: |
-        python ./upload.py -n 1 -u ${{ secrets.USER_FOUR }} -p ${{ secrets.PASS_FOUR }} -f ./data/upload.txt
-    - name: 张
-      run: |
-        python ./upload.py -n 1 -u ${{ secrets.USER_FIVE }} -p ${{ secrets.PASS_FIVE }} -f ./data/upload.txt
+        python ./upload.py -n 1 -u ${{ secrets.NAME.NCOV }} -p ${{ secrets.PSW_NCOV }} -f ./data/upload.txt
+   
