--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,4 +1,4 @@
-name: '自动填报晨午晚检 --roccoshi'
+name: 'Automatic_check CHENWUWANJIAN'
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        presist-credentials: false
+        persist-credentials: false
         fetch-depth: 0
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
@@ -26,4 +26,4 @@ jobs:
     - name: Levick
       run: |
         python ./upload.py -n 1 -u ${{ secrets.NAME_NCOV }} -p ${{ secrets.PSW_NCOV }} -f ./data/upload.txt 
-#find username and password in github secrets, please add yours to github secrets if newly forked
+#----find username and password in github secrets, please add yours to github secrets if newly forked----
